# GalkinProject

./: README.md
GalkinApp/: CMakeLists.txt  GalkinApp.pro  answers.json  config.json  converterjson.cpp  converterjson.h  invertedindex.cpp  invertedindex.h  main.cpp  requests.json  resources.qrc  searchserver.cpp  searchserver.h  testsearchengine.cpp  testsearchengine.h
GalkinApp/GalkinAppTest/: CMakeLists.txt  testmain.cpp
GalkinApp/GalkinAppTests/: GalkinAppTests.pro  testmain.cpp
GalkinApp/include/: converterjson.h  invertedindex.h  searchserver.h
GalkinApp/resources/: file001.txt  file002.txt  file003.txt  file004.txt
GalkinApp/src/: converterjson.cpp  invertedindex.cpp  main.cpp  searchserver.cpp
